[package]
name = "kgltf"
version = "0.1.0"
authors = ["Ian Kettlewell <ian.kettlewell@gmail.com>"]
edition = "2018"
exclude = ["models/*", "generator/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
license = "Zlib OR Apache-2.0 OR MIT"
kjson = {path = "../kjson"}